import org.jetbrains.changelog.Changelog
import org.jetbrains.changelog.markdownToHTML
import org.jetbrains.intellij.platform.gradle.TestFrameworkType

plugins {
    id("java") // Java support
    alias(libs.plugins.kotlin) // Kotlin support
    alias(libs.plugins.intelliJPlatform) // IntelliJ Platform Gradle Plugin
    alias(libs.plugins.changelog) // Gradle Changelog Plugin
}

group = providers.gradleProperty("pluginGroup").get()
version = System.getenv("LD_VERSION") ?: providers.gradleProperty("pluginVersion").get()

// Set the JVM language level used to build the project.
// 2026.2 platform jar 是 Java 25 bytecode，JDK 21 javac 讀不動。
kotlin {
    jvmToolchain(25)
}

// Configure project's dependencies
repositories {
    mavenLocal()
    maven("https://jitpack.io")
    mavenCentral()

    // IntelliJ Platform Gradle Plugin Repositories Extension - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-repositories-extension.html
    intellijPlatform {
        defaultRepositories()
    }
}

// Dependencies are managed with Gradle version catalog - read more: https://docs.gradle.org/current/userguide/platforms.html#sub:version-catalog
dependencies {
    api("com.shuzijun:lc-sdk:0.0.3")
    api("com.alibaba:fastjson:1.2.83")
    api("org.jsoup:jsoup:1.15.4")
    api("io.sentry:sentry:1.7.9") {
        exclude(module = "slf4j-api")
    }
    api("org.apache.commons:commons-lang3:3.9")
    api("com.vladsch.flexmark:flexmark:0.62.2")
    api("com.vladsch.flexmark:flexmark-ext-attributes:0.62.2")
    api("io.github.biezhi:TinyPinyin:2.0.3.RELEASE")
    // Apache HttpClient/HttpMime — IntelliJ 2026.x 已從 platform core 移除，登入(HttpLogin multipart)與
    // cookie(CookieUtils BasicClientCookie) 用到；自帶進 plugin，不賭 platform 是否提供（headless 測不到登入路徑）
    api("org.apache.httpcomponents:httpmime:4.5.14")
    // api(fileTree(mapOf("dir" to "src/main/resources/lib", "include" to listOf("*.jar"))))

    testImplementation(libs.junit)
    testImplementation(libs.opentest4j)

    // IntelliJ Platform Gradle Plugin Dependencies Extension - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-dependencies-extension.html
    intellijPlatform {
        create(providers.gradleProperty("platformType"), providers.gradleProperty("platformVersion"))
        // 2026.x JCEF 拆成獨立 bundled plugin，<depends> 只解 runtime、不解 compile classpath，
        // 沒有這行 compileJava 就找不到 com.intellij.ui.jcef.* 的 symbol。
        bundledPlugin("com.intellij.modules.jcef")

        // Plugin Dependencies. Uses `platformBundledPlugins` property from the gradle.properties file for bundled IntelliJ Platform plugins.
        //bundledPlugins(providers.gradleProperty("platformBundledPlugins").map { it.split(',') })

        // Plugin Dependencies. Uses `platformPlugins` property from the gradle.properties file for plugin from JetBrains Marketplace.
        //plugins(providers.gradleProperty("platformPlugins").map { it.split(',') })

        // Module Dependencies. Uses `platformBundledModules` property from the gradle.properties file for bundled IntelliJ Platform modules.
        //bundledModules(providers.gradleProperty("platformBundledModules").map { it.split(',') })

        testFramework(TestFrameworkType.Platform)
    }
}

// Configure IntelliJ Platform Gradle Plugin - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-extension.html
intellijPlatform {
    pluginConfiguration {
        name = providers.gradleProperty("pluginName")
        version = project.version.toString()

        // Extract the <!-- Plugin description --> section from README.md and provide for the plugin's manifest
        description = providers.fileContents(layout.projectDirectory.file(providers.gradleProperty("pluginDescription").get())).asText.get()

        val changelog = project.changelog // local variable for configuration cache compatibility
        // Get the latest available change notes from the changelog file
        changeNotes = with(changelog) {
            renderItem(
                (getOrNull(project.version.toString() + ".0") ?: getUnreleased())
                    .withHeader(false)
                    .withEmptySections(false),
                Changelog.OutputType.HTML,
            )
        }

        ideaVersion {
            sinceBuild = providers.gradleProperty("pluginSinceBuild")
        }
    }

    publishing {
        token = providers.environmentVariable("PUBLISH_TOKEN")
        // The pluginVersion is based on the SemVer (https://semver.org) and supports pre-release labels, like 2.1.7-alpha.3
        // Specify pre-release label to publish the plugin in a custom Release Channel automatically. Read more:
        // https://plugins.jetbrains.com/docs/intellij/deployment.html#specifying-a-release-channel
        channels = providers.gradleProperty("pluginVersion").map { listOf(it.substringAfter('-', "").substringBefore('.').ifEmpty { "default" }) }
    }

    pluginVerification {
        // 只擋會導致「裝不上／啟動崩潰」的相容性、缺依賴、結構問題（這次的 JCEF 缺依賴正屬此類，會被擋）。
        // internal/override-only API 使用是這個 2 年老 plugin 的既有規範債、不影響相容，降為警告不擋發布。
        failureLevel = listOf(
            org.jetbrains.intellij.platform.gradle.tasks.VerifyPluginTask.FailureLevel.COMPATIBILITY_PROBLEMS,
            org.jetbrains.intellij.platform.gradle.tasks.VerifyPluginTask.FailureLevel.MISSING_DEPENDENCIES,
            org.jetbrains.intellij.platform.gradle.tasks.VerifyPluginTask.FailureLevel.INVALID_PLUGIN,
        )
        ides {
            // 只留 explicit pin，不加 recommended()：sinceBuild=262 之後兩者已撞同一顆 build
            // （實測 verifyPlugin 只跑「1 of 1 verifications」，recommended() 沒有增加額外覆蓋）。
            // recommended() 是動態的——sinceBuild 之後若再往前推、或 plugin 版號更新，它會悄悄
            // 不再測 2026.2 這個「使用者實際平台」底線；explicit pin 才是固定錨點，別改回 recommended()。
            create("IU", "2026.2")
        }
    }
}

// Configure Gradle Changelog Plugin - read more: https://github.com/JetBrains/gradle-changelog-plugin
changelog {
    groups.empty()
    repositoryUrl = providers.gradleProperty("pluginRepositoryUrl")
}


tasks {
    wrapper {
        gradleVersion = providers.gradleProperty("gradleVersion").get()
    }

    publishPlugin {
        dependsOn(patchChangelog)
    }
}

intellijPlatformTesting {
    runIde {
        register("runIdeForUiTests") {
            task {
                jvmArgumentProviders += CommandLineArgumentProvider {
                    listOf(
                        "-Dfile.encoding=utf-8"
                    )
                }
            }

            plugins {
                robotServerPlugin()
            }
        }
    }
}